# fastapi-sqlmodel-alembic-htmx

./: .env  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
app/: main.py
static/css/: app.css
templates/: customers.html  index.html  item.html
